<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NFC MART</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="ok">예</string>
    <string name="cancel">아니오</string>
    <string name="add_singer">물품 추가</string>
    <string name="delete_singer">목록에서 삭제하시겠습니까?</string>
    <string name="menu_settings1">Settings1</string>
    <string name="menu_settings2">Settings2</string>
    <string name="menu_settings3">Settings3</string>
    <string name="menu_settings4">Settings4</string>
    <string name="menu_settings5">SubMenu</string>
    <string name="menu_settings6">Settings6</string>
    <string name="menu_settings7">Settings7</string>
    <string name="menu_settings8">Settings8</string>
    <string name="menu_settings9">Settings9</string>
    <string name="hello">Hello World, NMapViewer!</string>
    <string name="str_done">완료</string>
    <string name="warning_nfc_is_off">NFC is currently turned off!</string>
    <string name="turn_on_nfc">NFC Inventory can\'t be used without NFC enabled. Please turn on NFC in the Settings and then use the back button to return to this app.</string>
    <string name="instructions">Scan the NFC tag on the computer for information on its internals. Use the editable text fields below to make changes and click the update button to re-flash the NFC tag.</string>
    <string name="computer_name_label">Computer Name</string>
    <string name="computer_ram_label">RAM (GB)</string>
    <string name="computer_processor_label">Processor speed (MHz)</string>
    <string name="write_to_tag_button_label">Update</string>
    <string name="new_tag_found">New inventory tag found!</string>
    <string name="replace_current_tag">Read tag and replace currently displayed tag information in the textfields?</string>
    <string name="ready_to_write">Ready to write to NFC tag!</string>
    <string name="ready_to_write_instructions">Touch your device to a computer\'s tag to update its inventory.</string>
    <string name="ready_to_write_instructions_generic">Touch your device a tag to write.</string>
    <string name="NFC_NO_SETTING">NFC가 설정되어있지 않습니다. 환경설정에서 설정해주세요</string>

</resources>