<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructions" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dip"
            android:text="마트이름" />

        <Spinner
            android:id="@+id/spin_MartName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dip"
            android:text="@string/computer_name_label" />

        <Spinner
            android:id="@+id/spin_Name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dip"
            android:text="@string/computer_ram_label" />

        <EditText
            android:id="@+id/computer_ram"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:inputType="text"
            android:singleLine="true"
            android:text="" />
    </LinearLayout>

    <Button
        android:id="@+id/write_tag"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/write_to_tag_button_label" />

    <Button
        android:id="@+id/write_tag_all"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="updata_all" />

</LinearLayout>